--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -191,12 +191,24 @@ variables:
         </h2>
       </div>
       <div class="column is-narrow">
-        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-calendar" target="_blank">
-          <span class="icon">
-              <i class="fa fa-github"></i>
-          </span>
-          <span>View on Github</span>
-        </a>
+        <div class="field is-grouped is-grouped-multiline">
+          <div class="control">
+            <a class="tags has-addons" href="https://github.com/Wikiki/bulma-calendar" target="_blank">
+              <span class="tag">View on Github</span>
+              <span class="tag is-dark">
+                <span class="icon">
+                  <i class="fa fa-github"></i>
+                </span>
+              </span>
+            </a>
+          </div>
+          <div class="control">
+            <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-calendar" target="_blank">
+              <span class="tag">NPM Package</span>
+              <span class="tag is-success">0.0.1</span>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     {%
@@ -217,7 +229,7 @@ variables:
     {% highlight html %}{{calendar_example}}{% endhighlight %}
 
     {% include anchor.html name="Sizes" %}
-    <p>You can use <span class="tag">is-large</span> modifier to display a large detailed calendar.</p>
+    <p>You can use <code>is-large</code> modifier to display a large detailed calendar.</p>
     <div class="bd-example">
       {{calendar_sizes_example}}
     </div>
