--- a/bulma-extensions/tooltip.html
+++ b/bulma-extensions/tooltip.html
@@ -40,12 +40,24 @@ doc-subtab: tooltip
         </h2>
       </div>
       <div class="column is-narrow">
-        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-tooltip" target="_blank">
-          <span class="icon">
-              <i class="fa fa-github"></i>
-          </span>
-          <span>View on Github</span>
-        </a>
+        <div class="field is-grouped is-grouped-multiline">
+          <div class="control">
+            <a class="tags has-addons" href="https://github.com/Wikiki/bulma-tooltip" target="_blank">
+              <span class="tag">View on Github</span>
+              <span class="tag is-dark">
+                <span class="icon">
+                  <i class="fa fa-github"></i>
+                </span>
+              </span>
+            </a>
+          </div>
+          <div class="control">
+            <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-tooltip" target="_blank">
+              <span class="tag">NPM Package</span>
+              <span class="tag is-success">0.0.1</span>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     {%
@@ -66,7 +78,7 @@ doc-subtab: tooltip
     <hr>
 
     <h3 class="title">Positions</h3>
-    <h4 class="subtitle">You can use <span class="tag">.is-tooltip-top</span> <span class="tag">.is-tooltip-right</span> <span class="tag">.is-tooltip-bottom</span> <span class="tag">.is-tooltip-left</span> modifiers to change the tooltip position</h4>
+    <h4 class="subtitle">You can use <code>.is-tooltip-top</code> <code>.is-tooltip-right</code> <code>.is-tooltip-bottom</code> <code>.is-tooltip-left</code> modifiers to change the tooltip position</h4>
     <div class="columns">
       <div class="column">
         {{tooltip_positions_example}}
