Add white checkradio

--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -48,6 +48,17 @@ variables:
   <input class="is-radio is-large is-warning" id="exampleRadio4" type="radio" name="exampleRadio">
   <label for="exampleRadio4">Radio choice - large</label>
 </div>
+
+
+<div class="bd-notification is-dark">
+  <div class="field">
+    <input class="is-radio is-white" id="exampleRadioWhite" type="radio" name="exampleRadioWhite" checked="checked">
+    <label for="exampleRadioWhite">Radio - white</label>
+
+    <input class="is-radio is-white" id="exampleRadioWhite2" type="radio" name="exampleRadioWhite">
+    <label for="exampleRadioWhite2">Radio - white</label>
+  </div>
+</div>
 {% endcapture %}
 
 {% capture checkradio_disabled_example %}
@@ -81,6 +92,16 @@ variables:
 <div class="field">
   <input class="is-checkbox is-info" id="exampleCheckboxInfo" type="checkbox" name="exampleCheckboxInfo" checked="checked">
   <label for="exampleCheckboxInfo">Checkbox - info</label>
+</div>
+
+<div class="bd-notification is-dark">
+  <div class="field">
+    <input class="is-checkbox is-white" id="exampleCheckboxWhite" type="checkbox" name="exampleCheckboxWhite" checked="checked">
+    <label for="exampleCheckboxWhite">Checkbox - white</label>
+
+    <input class="is-checkbox is-white" id="exampleCheckboxWhite2" type="checkbox" name="exampleCheckboxWhite2">
+    <label for="exampleCheckboxWhite2">Checkbox - white</label>
+  </div>
 </div>
 {% endcapture %}
 
@@ -164,7 +185,7 @@ variables:
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-checkradio" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">0.0.2</span>
             </a>
           </div>
         </div>
