Fix badge radius and line-height

--- a/bulma-extensions/badge.html
+++ b/bulma-extensions/badge.html
@@ -5,9 +5,11 @@ doc-tab: bulma-extensions
 doc-subtab: badge
 variables:
 - name: $badge-shadow
-  value: 0 0 0 .2rem #fff
+  value: 0 0 0 .1rem $white
+- name: $badge-font-size
+  value: $size-7
 - name: $badge-border-radius
-  value: 50%
+  value: 1rem
 ---
 
 {% capture badge_example %}
