Add variable for npm version

--- a/bulma-extensions/badge.html
+++ b/bulma-extensions/badge.html
@@ -3,6 +3,7 @@ title: Badge
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: badge
+npm-version: 0.0.1
 variables:
 - name: $badge-shadow
   value: 0 0 0 .1rem $white
@@ -81,7 +82,7 @@ variables:
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-badge" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
