--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -3,6 +3,7 @@ title: Checkradio
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: checkradio
+npm-version: 0.0.3
 variables:
 - name: $checkbox-radius
   value: $radius
@@ -185,7 +186,7 @@ variables:
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-checkradio" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.2</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
