--- a/bulma-extensions/slider.html
+++ b/bulma-extensions/slider.html
@@ -3,6 +3,7 @@ title: Slider
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: slider
+npm-version: 0.0.1
 variables:
 - name: $slider-radius
   value: $radius
@@ -188,7 +189,7 @@ document.addEventListener( 'DOMContentLoaded', function () {
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-slider" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
