--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -3,6 +3,7 @@ title: Calendar
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: calendar
+npm-version: 0.0.1
 variables:
 - name: $calendar-border
   value: .1rem solid $grey-lighter
@@ -205,7 +206,7 @@ variables:
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-calendar" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
