--- a/bulma-extensions/divider.html
+++ b/bulma-extensions/divider.html
@@ -3,6 +3,7 @@ title: Divider
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: divider
+npm-version: 0.0.1
 variables:
 - name: $divider-background-color
   value: $grey-lighter
@@ -50,7 +51,7 @@ variables:
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-divider" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
