--- a/bulma-extensions/pageloader.html
+++ b/bulma-extensions/pageloader.html
@@ -3,6 +3,7 @@ title: Page loader
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: pageloader
+npm-version: 0.0.1
 ---
 
 {% capture pageloader_example %}
@@ -35,7 +36,7 @@ doc-subtab: pageloader
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-pageloader" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
