--- a/bulma-extensions/steps.html
+++ b/bulma-extensions/steps.html
@@ -3,6 +3,7 @@ title: Steps
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: steps
+npm-version: 0.0.1
 variables:
 - name: $steps-maker-default-color
   value: $grey-light
@@ -212,7 +213,7 @@ variables:
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-steps" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
