--- a/bulma-extensions/switch.html
+++ b/bulma-extensions/switch.html
@@ -3,6 +3,7 @@ title: Switch
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: switch
+npm-version: 0.0.1
 variables:
 - name: $switch-background
   value: $grey-light
@@ -210,7 +211,7 @@ variables:
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-switch" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
