--- a/bulma-extensions/timeline.html
+++ b/bulma-extensions/timeline.html
@@ -3,6 +3,7 @@ title: Timeline
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: timeline
+npm-version: 0.0.1
 variables:
 - name: $timeline-marker-background-color
   value: $white
@@ -128,7 +129,7 @@ variables:
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-timeline" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
