--- a/bulma-extensions/tooltip.html
+++ b/bulma-extensions/tooltip.html
@@ -3,6 +3,7 @@ title: Tooltip
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: tooltip
+npm-version: 0.0.1
 ---
 
 {% capture tooltip_example %}
@@ -54,7 +55,7 @@ doc-subtab: tooltip
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-tooltip" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
