fix is-disabled modifier

--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -113,14 +113,14 @@ variables:
       <div class="calendar-date">Sat</div>
     </div>
     <div class="calendar-body">
-      <div class="calendar-date disabled"><button class="date-item">26</button></div>
-      <div class="calendar-date disabled">
+      <div class="calendar-date is-disabled"><button class="date-item">26</button></div>
+      <div class="calendar-date is-disabled">
         <button class="date-item">27</button>
         <div class="calendar-events">
           <a class="calendar-event">Default event</a>
         </div>
       </div>
-      <div class="calendar-date disabled"><button class="date-item">28</button></div>
+      <div class="calendar-date is-disabled"><button class="date-item">28</button></div>
       <div class="calendar-date"><button class="date-item">1</button></div>
       <div class="calendar-date"><button class="date-item">2</button></div>
       <div class="calendar-date"><button class="date-item">3</button></div>
@@ -169,7 +169,7 @@ variables:
       <div class="calendar-date"><button class="date-item">29</button></div>
       <div class="calendar-date"><button class="date-item">30</button></div>
       <div class="calendar-date"><button class="date-item">31</button></div>
-      <div class="calendar-date disabled">
+      <div class="calendar-date is-disabled">
         <button class="date-item">1</button>
         <div class="calendar-events">
           <a class="calendar-event">Second default event</a>
