Add info regarding structure to follow

--- a/bulma-extensions/switch.html
+++ b/bulma-extensions/switch.html
@@ -234,6 +234,12 @@ variables:
         {% highlight html %}{{switch_example}}{% endhighlight %}
       </div>
     </div>
+
+    <div class="has-text-centered has-text-danegr">
+      <p>Don't forget to set <code>id</code> attribute on input and <code>for</code> attribute on label with the same value to get it work. This will link the label to the checkbox and then handle the click.</p>
+    </div>
+    <br />
+
     <div class="notification is-warning has-text-centered">
       <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided as exxample in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
     </div>
