Add quickview documentation

--- a/bulma-extensions/subnav-bulma-extensions.html
+++ b/bulma-extensions/subnav-bulma-extensions.html
@@ -40,6 +40,9 @@
       <a class="navbar-item is-tab {% if page.doc-subtab == 'tooltip' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/tooltip">
         Tooltip
       </a>
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'quickview' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/quickview">
+        QuickView
+      </a>
     </div>
   </div>
 </nav>
