--- a/bulma-extensions/quickview.html
+++ b/bulma-extensions/quickview.html
@@ -112,7 +112,7 @@ document.addEventListener( 'DOMContentLoaded', function () {
       <div class="column">
         <h1 class="title">{{ page.title }}</h1>
         <h2 class="subtitle">
-          Make classic <strong>checkbox</strong> and <strong>radio</strong> more sexy in different colors, sizes, and states
+          Display quick view of data without leaving the current page
         </h2>
       </div>
       <div class="column is-narrow">
