Add is-tooltip-multiline modifier

--- a/bulma-extensions/tooltip.html
+++ b/bulma-extensions/tooltip.html
@@ -80,6 +80,7 @@ npm-version: 0.0.1
 
     <h3 class="title">Positions</h3>
     <h4 class="subtitle">You can use <code>.is-tooltip-top</code> <code>.is-tooltip-right</code> <code>.is-tooltip-bottom</code> <code>.is-tooltip-left</code> modifiers to change the tooltip position</h4>
+    <h4 class="subtitle">You can force multine display by using <code>.is-tooltip-multiline</code> modifier.</h4>
     <div class="columns">
       <div class="column">
         {{tooltip_positions_example}}
