Add tooltip max-width variable

--- a/bulma-extensions/tooltip.html
+++ b/bulma-extensions/tooltip.html
@@ -7,6 +7,8 @@ npm-version: 0.0.3
 variables:
 - name: $tooltip-background-color
   value: $grey-dark
+- name: $tooltip-max-width
+  value: 24rem
 ---
 
 {% capture tooltip_example %}
